# async-rust-graphql-api

./: .env  Cargo.toml
src/: db.rs  main.rs
